--- a/medmonics/index.html
+++ b/medmonics/index.html
@@ -4,10 +4,56 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>MedicalMonics</title>
+    <style>
+      html, body {
+        min-height: 100vh;
+        margin: 0;
+        padding: 0;
+        font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+        background: linear-gradient(135deg, #232946 0%, #23283b 60%, #1a1a2e 100%);
+        color: #eaeaea;
+        transition: background 0.3s;
+      }
+      #root {
+        min-height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      .initial-loader {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1.2em;
+      }
+      .loader-spinner {
+        width: 48px;
+        height: 48px;
+        border: 5px solid #e94560;
+        border-top: 5px solid #232946;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+        margin-bottom: 0.5em;
+      }
+      @keyframes spin {
+        to { transform: rotate(360deg); }
+      }
+      .loader-text {
+        color: #e94560;
+        font-size: 1.2em;
+        font-weight: 600;
+        letter-spacing: 0.03em;
+      }
+    </style>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div class="initial-loader">
+        <div class="loader-spinner"></div>
+        <div class="loader-text">Loading MedicalMonics...</div>
+      </div>
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
