--- a/medmonics/index.html
+++ b/medmonics/index.html
@@ -17,14 +17,14 @@
       }
       #root {
         min-height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        width: 100%;
       }
       .initial-loader {
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: center;
+        min-height: 100vh;
         gap: 1.2em;
       }
       .loader-spinner {
